feat: 🎸 genre resource created
