# app/Http/Controllers/Api/GenreController.php
@@ -1,0 +1,178 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use App\Models\Genre;
+use Illuminate\Http\Request;
+
+class GenreController extends Controller
+{
+    private $rules = [
+       'name' => 'required|max:255',
+       'is_active' => 'boolean'
+    ];
+
+    /**
+    * @OA\Get(
+    *     path="/genres",
+    *     operationId="getGenresList",
+    *     tags={"Genres"},
+    *     summary="Get list of genres",
+    *     description="Returns list of genres",
+    *     @OA\Response(
+    *         response=200,
+    *         description="Successful operation",
+    *         @OA\JsonContent(ref="#/components/schemas/GenreResource")
+    *     ),
+    *      @OA\Response(
+    *          response=401,
+    *          description="Unauthenticated",
+    *      ),
+    *      @OA\Response(
+    *          response=403,
+    *          description="Forbidden"
+    *      ),
+    *     @OA\Response(
+    *         response=500,
+    *         description="An internal error has occurred"
+    *     )
+    * )
+    */
+    public function index()
+    {
+        return Genre::all();
+    }
+
+     /**
+     * @OA\Post(
+     *      path="/genres",
+     *      operationId="storeGenre",
+     *      tags={"Genres"},
+     *      summary="Store new genre",
+     *      description="Returns genre data",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/StoreGenreRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Genre")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      )
+     * )
+     */
+    public function store(Request $request)
+    {
+        $this->validate($request, $this->rules);
+        return Genre::create($request->all());
+    }
+
+    public function show(Genre $genre)
+    {
+        return $genre;
+    }
+
+     /**
+     * @OA\Put(
+     *      path="/genres/{id}",
+     *      operationId="updateProject",
+     *      tags={"Genres"},
+     *      summary="Update existing genre",
+     *      description="Returns updated genre data",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Genre id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(ref="#/components/schemas/StoreGenreRequest")
+     *      ),
+     *      @OA\Response(
+     *          response=202,
+     *          description="Successful operation",
+     *          @OA\JsonContent(ref="#/components/schemas/Genre")
+     *       ),
+     *      @OA\Response(
+     *          response=400,
+     *          description="Bad Request"
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
+     */
+    public function update(Request $request, Genre $genre)
+    {
+        $this->validate($request, $this->rules);
+        $genre->update($request->all());
+        return $genre;
+    }
+
+      /**
+     * @OA\Delete(
+     *      path="/genres/{id}",
+     *      operationId="deleteGenre",
+     *      tags={"Genres"},
+     *      summary="Delete existing genre",
+     *      description="Deletes a record and returns no content",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Genre id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=204,
+     *          description="Successful operation",
+     *          @OA\JsonContent()
+     *       ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *      )
+     * )
+     */
+    public function destroy(Genre $genre)
+    {
+        $genre->delete();
+        return response()->noContent();
+    }
+}
